<resources>
    <string name="app_name">Avenger IT</string>
    <string name="facebook_app_id">447567286690586</string>
    <string name="fb_login_protocol_scheme">fb447567286690586</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_hay_personajes_cargados">No se pudo cargar la lista de personajes</string>
    <string name="marvel_challenge">Marvel Challenge</string>
    <string name="comics_en_los_que_aparece">COMICS EN LOS QUE APARECE</string>
    <string name="este_personaje_todavia_no_aparecio_en_un_comic" />
    <string name="personajes">Personajes</string>
    <string name="eventos">Eventos</string>
    <string name="password">Contraseña</string>
    <string name="password_repeat">Repite la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Crear cuenta</string>
    <string name="ya_tengo_una"><u>Ya tengo cuenta</u></string>
    <string name="error_login">Ocurrio un error al entrar</string>
    <string name="registered_user_succes">Usuario registrado correctamente!</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="email">Email</string>
    <string name="aun_no_tienes_cuenta">¿Aun no tienes cuenta?</string>
    <string name="completar_campos">Por favor completa los campos de forma correcta</string>
    <string name="algo_malio_sal">Algo salio mal</string>
    <string name="cerrar_session">¿Cerrar sesion?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
</resources>