<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/aun_no_tienes_cuenta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/registrarse"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayouEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmail"
            style="@style/EditTextMarvel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayouPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayouEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPass"
            style="@style/EditTextMarvel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayouPassRepeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:animateLayoutChanges="true"
        android:hint="@string/password_repeat"
        android:textColorHint="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayouPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassRepeat"
            style="@style/EditTextMarvel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/entrar"
        style="@style/ButtomMarvel"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayouPassRepeat"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/textInputLayouPassRepeat" />

    <ImageView
        android:id="@+id/buttonFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_marvel_fondo" />

    <Button
        android:id="@+id/buttonRegistrarUser"
        style="@style/ButtomMarvel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewClipBoard"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFacebook"
        app:layout_constraintStart_toEndOf="@+id/buttonFacebook"
        app:layout_constraintTop_toTopOf="@+id/buttonFacebook"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_clipboard" />


</androidx.constraintlayout.motion.widget.MotionLayout>