<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        android:id="@+id/start_to_end"
        motion:autoTransition="animateToEnd"
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="2000" />

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="1000dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/textInputLayouEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:alpha="0"
            motion:layout_constraintBottom_toTopOf="@+id/textInputLayouPass"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/imageView"
            motion:layout_constraintVertical_bias="1.0" />
        <Constraint
            android:id="@+id/textInputLayouPassRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/textInputLayouPass" />
        <Constraint
            android:id="@+id/textInputLayouPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:alpha="0"
            motion:layout_constraintBottom_toTopOf="@+id/buttonEntrar"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/textInputLayouEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:alpha="1"
            motion:layout_constraintBottom_toTopOf="@+id/textInputLayouPass"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/imageView"
            motion:layout_constraintVertical_bias="1.0" />
        <Constraint
            android:id="@+id/textInputLayouPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:alpha="1"
            motion:layout_constraintBottom_toTopOf="@+id/buttonEntrar"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/buttonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            motion:layout_constraintBottom_toBottomOf="@+id/textView"
            motion:layout_constraintStart_toEndOf="@+id/textView"
            motion:layout_constraintTop_toTopOf="@+id/textView">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/registrarse" />
        </Constraint>
        <Constraint
            android:id="@+id/textInputLayouPassRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/textInputLayouPass" />
        <Constraint
            android:id="@+id/buttonEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:visibility="visible"
            motion:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
            motion:layout_constraintEnd_toEndOf="@+id/textInputLayouPassRepeat"
            motion:layout_constraintHorizontal_bias="0.511"
            motion:layout_constraintStart_toStartOf="@+id/textInputLayouPassRepeat" />
        <Constraint
            android:id="@+id/buttonRegistrarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:visibility="gone"
            motion:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
        <Constraint
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            motion:layout_constraintBottom_toTopOf="@+id/textView"
            motion:layout_constraintStart_toStartOf="parent"
            android:id="@+id/buttonFacebook" />
        <Constraint
            android:id="@+id/textView"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            motion:layout_constraintHorizontal_bias="0.24"
            motion:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" >
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/aun_no_tienes_cuenta" />
        </Constraint>
    </ConstraintSet>
    <ConstraintSet android:id="@+id/mode_register">
        <Constraint
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/textInputLayouEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="1"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/imageView" />
        <Constraint
            android:id="@+id/textInputLayouPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="1"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/textInputLayouEmail" />
        <Constraint
            android:id="@+id/textInputLayouPassRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="visible"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/textInputLayouPass" />
        <Constraint
            android:id="@+id/buttonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            motion:layout_constraintBottom_toBottomOf="@+id/textView"
            motion:layout_constraintStart_toEndOf="@+id/textView"
            motion:layout_constraintTop_toTopOf="@+id/textView">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/ya_tengo_una" />
        </Constraint>
        <Constraint
            android:id="@+id/buttonEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:visibility="gone"
            motion:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
            motion:layout_constraintEnd_toEndOf="@+id/textInputLayouPassRepeat"
            motion:layout_constraintHorizontal_bias="0.511"
            motion:layout_constraintStart_toStartOf="@+id/textInputLayouPassRepeat" />
        <Constraint
            android:id="@+id/buttonRegistrarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:visibility="visible"
            motion:layout_constraintBottom_toTopOf="@+id/buttonFacebook"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
        <Constraint
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            motion:layout_constraintBottom_toTopOf="@+id/textView"
            motion:layout_constraintStart_toStartOf="parent"
            android:id="@+id/buttonFacebook" />
        <Constraint
            android:id="@+id/textView"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            motion:layout_constraintHorizontal_bias="0.24"
            motion:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" >
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="       ◀ " />
        </Constraint>
    </ConstraintSet>
    <Transition
        motion:constraintSetEnd="@+id/mode_register"
        motion:constraintSetStart="@+id/end">
        <OnClick motion:targetId="@+id/buttonRegistrar" />
    </Transition>
</MotionScene>